force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Bundle_Product__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Bundle_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field associate bundle products with service order detail</description>
    <label>Bundle Product</label>
    <referenceTo>CHANNEL_ORDERS__Partner_Bundle_Product__c</referenceTo>
    <relationshipLabel>Service Order Detail</relationshipLabel>
    <relationshipName>Service_Order_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>