force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Customer_Price__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Customer_Price__c</fullName>
    <description>Field retired in Channel Order App v2.0. Use CHANNEL_ORDERS__Customer_Price_Per_Month__c instead.</description>
    <inlineHelpText>Required if you are ordering a PNR product.  Please provide the monthly customer price per seat of your application.</inlineHelpText>
    <label>Customer Price (User/Month) (deprecated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>