force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Order_Detail_Value__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Order_Detail_Value__c</fullName>
    <description>Total value of the line item.</description>
    <formula>IF(  ISPICKVAL(CHANNEL_ORDERS__pc_Pricing_Type__c, &apos;FIXED&apos;), CHANNEL_ORDERS__Quantity__c *   CHANNEL_ORDERS__pc_Fixed_Price__c  , IF(ISPICKVAL(CHANNEL_ORDERS__pc_Pricing_Type__c, &apos;Fixed Price - Normalized Monthly Pricing&apos;),  CHANNEL_ORDERS__Quantity__c * CHANNEL_ORDERS__pc_Normalized_Price__c, CHANNEL_ORDERS__Quantity__c *    CHANNEL_ORDERS__Customer_Price_Per_Month__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Detail Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>