force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Parent_Service_Order_Detail__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Parent_Service_Order_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is populated in case of bundle detail record</description>
    <label>Parent Service Order Detail</label>
    <referenceTo>CHANNEL_ORDERS__Service_Order_Detail__c</referenceTo>
    <relationshipLabel>Service Order Detail</relationshipLabel>
    <relationshipName>Service_Order_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>