force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__pc_Cancellation_Terms__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__pc_Cancellation_Terms__c</fullName>
    <description>Number of days the customer has to cancel the contract. The value must match your Salesforce contract, unless you’ve been granted override permissions.</description>
    <label>Cancellation Terms (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>