force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__pc_Contract_Length__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__pc_Contract_Length__c</fullName>
    <description>Length of the contract in months. The value must match your Salesforce contract, unless you’ve been granted override permissions.</description>
    <label>Contract Length</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>