force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__pc_Floor_Price__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__pc_Floor_Price__c</fullName>
    <description>Field retired in Channel Order App v2.0.</description>
    <label>Floor Price (deprecated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>