force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__pc_Normalized_Price__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__pc_Normalized_Price__c</fullName>
    <description>This field is used to store normalised price for consumption product order detail.</description>
    <label>Normalized Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>