force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__pc_PNR__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__pc_PNR__c</fullName>
    <description>Field retired in Channel Order App v2.0. Use CHANNEL_ORDERS__PNR__c instead.</description>
    <label>PNR % (deprecated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>