force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__pc_Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__pc_Pricing_Type__c</fullName>
    <description>Pricing model of the product. This field must be explicitly set when using the API.</description>
    <label>Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PNR</fullName>
            </value>
            <value>
                <fullName>FIXED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>