force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__pc_Renewal_Terms__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__pc_Renewal_Terms__c</fullName>
    <description>Renewal term in months. This value must match your Salesforce contract, unless you’ve been granted override permissions.</description>
    <label>Renewal Terms (Months)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>