force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Product_Line_Description__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Product_Line_Description__c</fullName>
    <description>Additional invoice details about the product or order. This field is optional.</description>
    <inlineHelpText>Product Line Description will be displayed on the Invoice</inlineHelpText>
    <label>Line Item Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>