force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Product_Special_Terms__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Product_Special_Terms__c</fullName>
    <description>Special terms and conditions associated with the product.</description>
    <label>Product Special Terms</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>