force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Detail__c/fields/CHANNEL_ORDERS__Usage_Rate__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Usage_Rate__c</fullName>
    <description>This field is used to store the usage rate for consumption products</description>
    <label>Usage Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>